hard-gists/4988673/run.log
=== Docker Run Log for 4988673 ===
Started at: Mi 29. Okt 15:05:12 CET 2025

[2025-10-29 15:05:13] START: Running container for 4988673
[2025-10-29 15:05:13] SUCCESS: Container 918b1add86561436f3237d71c178814d68c00bdb31e18d8bfd6a257900b5734a started for 4988673
=== Container logs for 4988673 ===
  File "/snippet.py", line 74
    print "Value %s is out of bounds, setting to 9999" % value
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 4988673 ===
[2025-10-29 15:05:15] INFO: Container 918b1add86561436f3237d71c178814d68c00bdb31e18d8bfd6a257900b5734a has stopped
